--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "1.1.1",
     "date-fns": "2.25.0",
     "history": "5.0.1",
+    "javascript-time-ago": "^2.3.13",
     "notistack": "^2.0.3",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
@@ -38,6 +39,7 @@
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
+    "react-time-ago": "^7.1.9",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.0",
     "web-vitals": "2.1.2"
